# Explainable-Market-Benchmarking-and-Price-Decision-Support-System-for-Short-Term-Rentals

./: .gitattributes  .gitignore  AGENTS.md  README.md  airbnb_italian_city_grouped.csv  professor_project_scope_email.md  revised_pos_pricing_decision_support.md
backend/: AGENTS.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  model_routes.py
backend/src/config/: artifact_settings.py
backend/src/services/: __init__.py  goal2_artifact_loader.py  price_decision_service.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_artifact_settings.py  test_price_decision_service.py
modeling/: AGENTS.md  pyproject.toml
modeling/reports/: GRAPH_EXPLANATIONS.md
modeling/src/: goal2_runner.py
modeling/src/benchmarking/: __init__.py  benchmark_range_calculator.py  listing_similarity_engine.py  price_positioning_service.py
modeling/src/data_foundation/: __init__.py  __main__.py  cleaned_dataset_builder.py  cleaned_dataset_runner.py  cleaned_dataset_validation.py  cleaned_dataset_validation_runner.py  contracts.py  dataset_inventory_runner.py  inspector.py  normalization.py  processed_output.py  provenance.py  raw_data_catalog_runner.py  raw_dataset_loader.py  report_writer.py  source_registry.py
modeling/src/evaluation/: __init__.py  data_profile_report.py  eda_chart_generator.py  eda_chart_runner.py  eda_summary_builder.py  leakage_audit.py  model_comparison_report.py  viz_theme.py
modeling/src/explainability/: __init__.py  local_explanation_builder.py
modeling/src/feature_engineering/: __init__.py  feature_matrix_builder.py  feature_registry.py  location_feature_builder.py  model_input_builder.py
modeling/src/price_estimation/: __init__.py  inference_bundle_builder.py  model_registry.py  price_model_trainer.py  training_config.py
modeling/tests/integration/: test_cleaned_dataset_real_data.py  test_cleaned_dataset_validation_real_data.py  test_contract_conformance.py  test_dataset_inventory_real_data.py  test_goal2_real_data_pipeline.py  test_midterm_eda_chart_pipeline_real_data.py
modeling/tests/unit/: test_cleaned_dataset_builder.py  test_cleaned_dataset_runner.py  (+21 more)
tests/: AGENTS.md  pyproject.toml
tests/integration/: test_goal4_beta_smoke.py
(+77 files in other folders)
