[project]
name = "market-benchmarking-backend"
version = "0.1.0"
description = "FastAPI backend for the local Goal 4 market benchmarking beta."
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2",
  "fastapi>=0.115",
  "httpx>=0.27",
  "joblib>=1.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "../modeling/src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
