[project]
name = "market-benchmarking-modeling"
version = "0.1.0"
description = "Dataset inventory and data contract tooling for the explainable market benchmarking project."
requires-python = ">=3.13"
dependencies = [
  "catboost>=1.2",
  "joblib>=1.4",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
