[project]
name = "market-benchmarking-system-tests"
version = "0.1.0"
description = "Cross-module smoke tests for the Goal 4 local beta."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["../backend/src", "../modeling/src"]
testpaths = ["integration"]
